// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Statuses should render status with {"status":"new"} 1`] = `
<div
  className="New"
  data-cy=""
>
  new
</div>
`;

exports[`Statuses should render status with {"text":"custom label","status":"new"} 1`] = `
<div
  className="New"
  data-cy=""
>
  custom label
</div>
`;
